--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <img src="img/logo.svg" alt="" class="logo__link">
                 </a>
                 <nav class="menu">
+                    <button class="menu__btn"></button>
                     <ul class="menu__list">
                         <li class="menu__item"><a href="" class="menu__list-link">About</a></li>
                         <li class="menu__item"><a href="" class="menu__list-link">Features</a></li>
@@ -32,45 +33,54 @@
                         <li class="menu__item"><a href="" class="menu__list-link">Pages</a></li>
                         <li class="menu__item"><a href="" class="menu__list-link">Contact</a></li>
                         <li class="menu__item">
-                            <a href="#" data-name="fa-search" class="icon">
+                            <a data-name="fa-search" class="icon">
                                 <i class="far fa-search "></i>
                             </a>
+                            <form class="search__form" action="#" method="post">
+                                <input class="search" type="text" id="search" name="search__input">
+                            </form>
                         </li>
+
                     </ul>
+
                 </nav>
             </div>
         </div>
     </header>
 
     <div class="top">
-        <div class="container">
-            <div class="top__slider">
-                <div class="top__slider-item">
-                    <img src="img/slider-img.png" alt="" class="top__slider-image">
+        <div class="top__slider">
+            <div class="top__slider-item">
+                <div class="container">
                     <h2 class="top__slider-title">We Do Big Things
                         With Big Ideas </h2>
                     <p class="top__slider-text">Talk To Our Experts and Get Your Dream Home Done. If you dream of
-                        designing <br> a new home that takes full advantage of the unique geography and <br>
+                        designing a new home that takes full advantage of the unique geography and
                         views of land that you love</p>
                     <a href="#" class="top__btn-link">Explore Now</a>
                 </div>
-                <div class="top__slider-item">
-                    <img src="img/slider-img.png" alt="" class="top__slider-image">
-                    <h2 class="top__slider-title">We Do Big Things
+                <img src="img/slider-img.jpg" alt="" class="top__slider-image">
+            </div>
+            <div class="top__slider-item">
+                <div class="container">
+                    <h2 class="top__slider-title">We Do Big Things With Big Ideas
                     </h2>
                     <p class="top__slider-text">Talk To Our Experts and Get Your Dream Home Done. If you dream of
-                        designing <br> a new home that takes full advantage of the unique geography and <br>
+                        designing a new home that takes full advantage of the unique geography and
                         views of land that you love</p>
                     <a href="#" class="top__btn-link">Explore Now</a>
                 </div>
-                <div class="top__slider-item">
-                    <img src="img/slider-img.png" alt="" class="top__slider-image">
-                    <h2 class="top__slider-title">We Do Big </h2>
+                <img src="img/slider-img.jpg" alt="" class="top__slider-image">
+            </div>
+            <div class="top__slider-item">
+                <div class="container">
+                    <h2 class="top__slider-title">We Do Big Things With Big Ideas</h2>
                     <p class="top__slider-text">Talk To Our Experts and Get Your Dream Home Done. If you dream of
-                        designing <br> a new home that takes full advantage of the unique geography and <br>
+                        designing a new home that takes full advantage of the unique geography and
                         views of land that you love</p>
                     <a href="#" class="top__btn-link">Explore Now</a>
                 </div>
+                <img src="img/slider-img.jpg" alt="" class="top__slider-image">
             </div>
         </div>
     </div>
@@ -98,7 +108,7 @@
             </div>
             <div class="features__courses">
                 <div class="features__courses-item">
-                    <img src="img/build.jpg" alt="" class="features__courses-image">
+                    <img src="img/features.jpg" alt="" class="features__courses-image">
                     <div class="features__courses-content">
                         <div class="features__courses-title">RENOVATIONS</div>
                         <div class="features__courses-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -107,7 +117,7 @@
                     </div>
                 </div>
                 <div class="features__courses-item">
-                    <img src="img/build.jpg" alt="" class="features__courses-image">
+                    <img src="img/features.jpg" alt="" class="features__courses-image">
                     <div class="features__courses-content">
                         <div class="features__courses-title">CONSULTING</div>
                         <div class="features__courses-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -116,7 +126,7 @@
                     </div>
                 </div>
                 <div class="features__courses-item">
-                    <img src="img/build.jpg" alt="" class="features__courses-image">
+                    <img src="img/features.jpg" alt="" class="features__courses-image">
                     <div class="features__courses-content">
                         <h3 class="features__courses-title">SMART HOUSES</h3>
                         <p class="features__courses-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
@@ -131,7 +141,7 @@
     <div class="testimonial">
         <div class="testimonial__video">
             <div class="testimonial__video-item">
-                <img src="img/slider-img.png" alt="" class="testimonial__video-img">
+                <img src="img/testimonial-img.jpg" alt="" class="testimonial__video-img">
             </div>
         </div>
         <div class="testimonial__content">
@@ -181,7 +191,7 @@
             <div id="tabs_container" class="tabs__body-All">
                 <div class="tabs__block Healthcare">
                     <div class="tabs__works-item">
-                        <img src="img/build.jpg" alt="" class="tabs__works-img">
+                        <img src="img/tab-1.jpg" alt="" class="tabs__works-img">
                         <div class="tabs__works-title">
                             <h3 class="tabs__works-head">ARCHITECTURE AND DESIGN</h3>
                             <div class="tabs__works-icons">
@@ -197,7 +207,7 @@
                 </div>
                 <div class="tabs__block Healthcare">
                     <div class="tabs__works-item">
-                        <img src="img/build.jpg" alt="" class="tabs__works-img">
+                        <img src="img/slider-img.jpg" alt="" class="tabs__works-img">
                         <div class="tabs__works-title">
                             <h3 class="tabs__works-head">ARCHITECTURE AND DESIGN</h3>
                             <div class="tabs__works-icons">
@@ -213,7 +223,7 @@
                 </div>
                 <div class="tabs__block Green">
                     <div class="tabs__works-item">
-                        <img src="img/build.jpg" alt="" class="tabs__works-img">
+                        <img src="img/tab-2.jpg" alt="" class="tabs__works-img">
                         <div class="tabs__works-title">
                             <h3 class="tabs__works-head">ARCHITECTURE AND DESIGN</h3>
                             <div class="tabs__works-icons">
@@ -229,7 +239,7 @@
                 </div>
                 <div class="tabs__block Green">
                     <div class="tabs__works-item">
-                        <img src="img/build.jpg" alt="" class="tabs__works-img">
+                        <img src="img/tab-3.jpg" alt="" class="tabs__works-img">
                         <div class="tabs__works-title">
                             <h3 class="tabs__works-head">ARCHITECTURE AND DESIGN</h3>
                             <div class="tabs__works-icons">
@@ -245,7 +255,7 @@
                 </div>
                 <div class="tabs__block Interior">
                     <div class="tabs__works-item">
-                        <img src="img/build.jpg" alt="" class="tabs__works-img">
+                        <img src="img/tab-4.jpg" alt="" class="tabs__works-img">
                         <div class="tabs__works-title">
                             <h3 class="tabs__works-head">ARCHITECTURE AND DESIGN</h3>
                             <div class="tabs__works-icons">
@@ -261,7 +271,7 @@
                 </div>
                 <div class="tabs__block Office">
                     <div class="tabs__works-item">
-                        <img src="img/build.jpg" alt="" class="tabs__works-img">
+                        <img src="img/tab-5.jpg" alt="" class="tabs__works-img">
                         <div class="tabs__works-title">
                             <h3 class="tabs__works-head">ARCHITECTURE AND DESIGN</h3>
                             <div class="tabs__works-icons">
@@ -281,77 +291,77 @@
     </div>
 
     <div class="feedback">
-        <div class="container">
-            <div class="feedback__content">
-                <div class="feedback__title">CUSTOMER FEEDBACK</div>
-                <div class="feedback__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat mollitia,
-                    labore magnam quae optio quod asperiores unde nostrum consectetur enim iusto dolores porro,
-                    inventore id
-                    voluptatibus voluptate a quis ut.</div>
+
+        <div class="feedback__content">
+            <div class="feedback__title">CUSTOMER FEEDBACK</div>
+            <div class="feedback__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat mollitia,
+                labore magnam quae optio quod asperiores unde nostrum consectetur enim iusto dolores porro,
+                inventore id
+                voluptatibus voluptate a quis ut.</div>
+        </div>
+        <div class="feedback__slider">
+            <div class="feedback__slider-item">
+                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
+                <p class="feedback__slider-text">
+                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                    wonderful! He
+                    has returned my calls quickly, and he answered all my questions.
+                    <br><span>HouseBuilders - CEO</span>
+                </p>
             </div>
-            <div class="feedback__slider">
-                <div class="feedback__slider-item">
-                    <img src="img/small.png" alt="" class="feedback__slider-images">
-                    <p class="feedback__slider-text">
-                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                        wonderful! He
-                        has returned my calls quickly, and he answered all my questions.
-                        <br><span>HouseBuilders - CEO</span>
-                    </p>
-                </div>
-                <div class="feedback__slider-item">
-                    <img src="img/small.png" alt="" class="feedback__slider-images">
-                    <p class="feedback__slider-text">
-                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                        wonderful! He
-                        has returned my calls quickly, and he answered all my questions.
-                        <br><span>HouseBuilders - CEO</span>
-                    </p>
-                </div>
-                <div class="feedback__slider-item">
-                    <img src="img/small.png" alt="" class="feedback__slider-images">
-                    <p class="feedback__slider-text">
-                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                        wonderful! He
-                        has returned my calls quickly, and he answered all my questions.
-                        <br><span>HouseBuilders - CEO</span>
-                    </p>
-                </div>
-                <div class="feedback__slider-item">
-                    <img src="img/small.png" alt="" class="feedback__slider-images">
-                    <p class="feedback__slider-text">
-                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                        wonderful! He
-                        has returned my calls quickly, and he answered all my questions.
-                        <br><span>HouseBuilders - CEO</span>
-                    </p>
-                </div>
-                <div class="feedback__slider-item">
-                    <img src="img/small.png" alt="" class="feedback__slider-images">
-                    <p class="feedback__slider-text">
-                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                        wonderful! He
-                        has returned my calls quickly, and he answered all my questions.
-                        <br><span>HouseBuilders - CEO</span>
-                    </p>
-                </div>
-                <div class="feedback__slider-item">
-                    <img src="img/small.png" alt="" class="feedback__slider-images">
-                    <p class="feedback__slider-text">
-                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                        wonderful! He
-                        has returned my calls quickly, and he answered all my questions.
-                        <br><span>HouseBuilders - CEO</span>
-                    </p>
-                </div>
+            <div class="feedback__slider-item">
+                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
+                <p class="feedback__slider-text">
+                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                    wonderful! He
+                    has returned my calls quickly, and he answered all my questions.
+                    <br><span>HouseBuilders - CEO</span>
+                </p>
             </div>
-            <div class="feedback__logo">
-                <img src="img/conversion.png" alt="" class="feedback__logo-img">
-                <img src="img/vienta.png" alt="" class="feedback__logo-img">
-                <img src="img/e-company.png" alt="" class="feedback__logo-img">
-                <img src="img/Digitalside.png" alt="" class="feedback__logo-img">
+            <div class="feedback__slider-item">
+                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
+                <p class="feedback__slider-text">
+                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                    wonderful! He
+                    has returned my calls quickly, and he answered all my questions.
+                    <br><span>HouseBuilders - CEO</span>
+                </p>
+            </div>
+            <div class="feedback__slider-item">
+                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
+                <p class="feedback__slider-text">
+                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                    wonderful! He
+                    has returned my calls quickly, and he answered all my questions.
+                    <br><span>HouseBuilders - CEO</span>
+                </p>
+            </div>
+            <div class="feedback__slider-item">
+                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
+                <p class="feedback__slider-text">
+                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                    wonderful! He
+                    has returned my calls quickly, and he answered all my questions.
+                    <br><span>HouseBuilders - CEO</span>
+                </p>
+            </div>
+            <div class="feedback__slider-item">
+                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
+                <p class="feedback__slider-text">
+                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                    wonderful! He
+                    has returned my calls quickly, and he answered all my questions.
+                    <br><span>HouseBuilders - CEO</span>
+                </p>
             </div>
         </div>
+        <div class="feedback__logo">
+            <img src="img/conversion.png" alt="" class="feedback__logo-img">
+            <img src="img/vienta.png" alt="" class="feedback__logo-img">
+            <img src="img/e-company.png" alt="" class="feedback__logo-img">
+            <img src="img/Digitalside.png" alt="" class="feedback__logo-img">
+        </div>
+
     </div>
 
     <div class="counter">
@@ -520,6 +530,10 @@
             </div>
         </div>
     </footer>
+    <!-- 
+    <div class="text">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>-->
 
     <script src="js/main.min.js"></script>
 </body>
