--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                                 <input class="search" type="text" id="search" name="search__input">
                             </form>
                         </li>
-
                     </ul>
-
                 </nav>
             </div>
         </div>
@@ -59,7 +57,7 @@
                         views of land that you love</p>
                     <a href="#" class="top__btn-link">Explore Now</a>
                 </div>
-                <img src="img/slider-img.jpg" alt="" class="top__slider-image">
+                <img src="img/slider-img-1.jpg" alt="" class="top__slider-image">
             </div>
             <div class="top__slider-item">
                 <div class="container">
@@ -70,7 +68,7 @@
                         views of land that you love</p>
                     <a href="#" class="top__btn-link">Explore Now</a>
                 </div>
-                <img src="img/slider-img.jpg" alt="" class="top__slider-image">
+                <img src="img/slider-img-2.jpg" alt="" class="top__slider-image">
             </div>
             <div class="top__slider-item">
                 <div class="container">
@@ -80,7 +78,7 @@
                         views of land that you love</p>
                     <a href="#" class="top__btn-link">Explore Now</a>
                 </div>
-                <img src="img/slider-img.jpg" alt="" class="top__slider-image">
+                <img src="img/slider-img-3.jpg" alt="" class="top__slider-image">
             </div>
         </div>
     </div>
@@ -117,7 +115,7 @@
                     </div>
                 </div>
                 <div class="features__courses-item">
-                    <img src="img/features.jpg" alt="" class="features__courses-image">
+                    <img src="img/consulting.jpg" alt="" class="features__courses-image">
                     <div class="features__courses-content">
                         <div class="features__courses-title">CONSULTING</div>
                         <div class="features__courses-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -126,7 +124,7 @@
                     </div>
                 </div>
                 <div class="features__courses-item">
-                    <img src="img/features.jpg" alt="" class="features__courses-image">
+                    <img src="img/smart.jpg" alt="" class="features__courses-image">
                     <div class="features__courses-content">
                         <h3 class="features__courses-title">SMART HOUSES</h3>
                         <p class="features__courses-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
@@ -207,7 +205,7 @@
                 </div>
                 <div class="tabs__block Healthcare">
                     <div class="tabs__works-item">
-                        <img src="img/slider-img.jpg" alt="" class="tabs__works-img">
+                        <img src="img/slider-img-1.jpg" alt="" class="tabs__works-img">
                         <div class="tabs__works-title">
                             <h3 class="tabs__works-head">ARCHITECTURE AND DESIGN</h3>
                             <div class="tabs__works-icons">
@@ -291,80 +289,85 @@
     </div>
 
     <div class="feedback">
+        <div class="container">
+            <div class="feedback__content">
+                <div class="feedback__title">CUSTOMER FEEDBACK</div>
+                <div class="feedback__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat mollitia,
+                    labore magnam quae optio quod asperiores unde nostrum consectetur enim iusto dolores porro,
+                    inventore id
+                    voluptatibus voluptate a quis ut.</div>
+            </div>
 
-        <div class="feedback__content">
-            <div class="feedback__title">CUSTOMER FEEDBACK</div>
-            <div class="feedback__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat mollitia,
-                labore magnam quae optio quod asperiores unde nostrum consectetur enim iusto dolores porro,
-                inventore id
-                voluptatibus voluptate a quis ut.</div>
-        </div>
-        <div class="feedback__slider">
-            <div class="feedback__slider-item">
-                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
-                <p class="feedback__slider-text">
-                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                    wonderful! He
-                    has returned my calls quickly, and he answered all my questions.
-                    <br><span>HouseBuilders - CEO</span>
-                </p>
+            <div class="feedback__slider">
+                <div class="feedback__slider-item">
+                    <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
+                    <p class="feedback__slider-text">
+                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                        wonderful! He
+                        has returned my calls quickly, and he answered all my questions.
+                        <br><span>HouseBuilders - CEO</span>
+                    </p>
+                </div>
+                <div class="feedback__slider-item">
+                    <img src="img/face-2.jpg" alt="" class="feedback__slider-images">
+                    <p class="feedback__slider-text">
+                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                        wonderful! He
+                        has returned my calls quickly, and he answered all my questions.
+                        <br><span>HouseBuilders - CEO</span>
+                    </p>
+                </div>
+                <div class="feedback__slider-item">
+                    <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
+                    <p class="feedback__slider-text">
+                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                        wonderful! He
+                        has returned my calls quickly, and he answered all my questions.
+                        <br><span>HouseBuilders - CEO</span>
+                    </p>
+                </div>
+                <div class="feedback__slider-item">
+                    <img src="img/face-2.jpg" alt="" class="feedback__slider-images">
+                    <p class="feedback__slider-text">
+                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                        wonderful! He
+                        has returned my calls quickly, and he answered all my questions.
+                        <br><span>HouseBuilders - CEO</span>
+                    </p>
+                </div>
+                <div class="feedback__slider-item">
+                    <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
+                    <p class="feedback__slider-text">
+                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                        wonderful! He
+                        has returned my calls quickly, and he answered all my questions.
+                        <br><span>HouseBuilders - CEO</span>
+                    </p>
+                </div>
+                <div class="feedback__slider-item">
+                    <img src="img/face-2.jpg" alt="" class="feedback__slider-images">
+                    <p class="feedback__slider-text">
+                        I've been happy with the services provided by Construction LLC. Scooter Libby has been
+                        wonderful! He
+                        has returned my calls quickly, and he answered all my questions.
+                        <br><span>HouseBuilders - CEO</span>
+                    </p>
+                </div>
             </div>
-            <div class="feedback__slider-item">
-                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
-                <p class="feedback__slider-text">
-                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                    wonderful! He
-                    has returned my calls quickly, and he answered all my questions.
-                    <br><span>HouseBuilders - CEO</span>
-                </p>
-            </div>
-            <div class="feedback__slider-item">
-                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
-                <p class="feedback__slider-text">
-                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                    wonderful! He
-                    has returned my calls quickly, and he answered all my questions.
-                    <br><span>HouseBuilders - CEO</span>
-                </p>
-            </div>
-            <div class="feedback__slider-item">
-                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
-                <p class="feedback__slider-text">
-                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                    wonderful! He
-                    has returned my calls quickly, and he answered all my questions.
-                    <br><span>HouseBuilders - CEO</span>
-                </p>
-            </div>
-            <div class="feedback__slider-item">
-                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
-                <p class="feedback__slider-text">
-                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                    wonderful! He
-                    has returned my calls quickly, and he answered all my questions.
-                    <br><span>HouseBuilders - CEO</span>
-                </p>
-            </div>
-            <div class="feedback__slider-item">
-                <img src="img/face-1.jpg" alt="" class="feedback__slider-images">
-                <p class="feedback__slider-text">
-                    I've been happy with the services provided by Construction LLC. Scooter Libby has been
-                    wonderful! He
-                    has returned my calls quickly, and he answered all my questions.
-                    <br><span>HouseBuilders - CEO</span>
-                </p>
-            </div>
-        </div>
-        <div class="feedback__logo">
-            <img src="img/conversion.png" alt="" class="feedback__logo-img">
-            <img src="img/vienta.png" alt="" class="feedback__logo-img">
-            <img src="img/e-company.png" alt="" class="feedback__logo-img">
-            <img src="img/Digitalside.png" alt="" class="feedback__logo-img">
-        </div>
 
+            <div class="feedback__logo">
+                <img src="img/conversion.png" alt="" class="feedback__logo-img">
+                <img src="img/vienta.png" alt="" class="feedback__logo-img">
+                <img src="img/e-company.png" alt="" class="feedback__logo-img">
+                <img src="img/Digitalside.png" alt="" class="feedback__logo-img">
+            </div>
+        </div>
     </div>
 
     <div class="counter">
+        <div class="counter__back">
+            <img src="img/counter-img.jpg" alt="" class="counter__img">
+        </div>
         <div class="container">
             <div class="counter__items">
                 <div class="counter__item">
@@ -395,7 +398,7 @@
                     <span>It can be used on larger scale projects as well as small scale projects without any
                         problems.</span>
                 </h3>
-                <a href="#" class="information__link">Contact Us Today!</a>
+                <a href="#" class="information__link">Contact Us!</a>
             </div>
         </div>
     </div>
@@ -409,7 +412,7 @@
             </div>
             <div class="news__courses">
                 <div class="news__courses-item">
-                    <img src="img/build.jpg" alt="" class="news__courses-image">
+                    <img src="img/courses-1.jpg" alt="" class="news__courses-image">
                     <div class="news__courses-content">
                         <div class="news__courses-title">Construction Forklift
                             Buyers Guide
@@ -420,7 +423,7 @@
                     </div>
                 </div>
                 <div class="news__courses-item">
-                    <img src="img/build.jpg" alt="" class="news__courses-image">
+                    <img src="img/tab-4.jpg" alt="" class="news__courses-image">
                     <div class="news__courses-content">
                         <div class="news__courses-title">How to plan for your
                             dream house?</div>
@@ -430,7 +433,7 @@
                     </div>
                 </div>
                 <div class="news__courses-item">
-                    <img src="img/build.jpg" alt="" class="news__courses-image">
+                    <img src="img/courses-3.jpg" alt="" class="news__courses-image">
                     <div class="news__courses-content">
                         <div class="news__courses-title">Builder of human
                             happiness for all time</div>
