--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <div class="contact__text">
                     Consulting And Estimate For Your Project, <span>Contact Us Today</span>
                 </div>
+                <div class="contact__span">Contact Us Today</div>
                 <div class="contact__btn">
                     <a href="#" class="contacts__btn-link">Get a Quote</a>
                 </div>
@@ -178,6 +179,7 @@
                 aliquam quisquam minus fugiat deserunt culpa!</p>
         </div>
         <div class="tabs">
+            <div class="tabs__menu">Menu</div>
             <nav class="tabs__items">
                 <a class="tabs__item tabs-All">All</a>
                 <a class="tabs__item tabs-Healthcare">Healthcare</a>
@@ -402,6 +404,7 @@
             </div>
         </div>
     </div>
+
     <div class="news">
         <div class="container">
             <div class="news__content">
@@ -449,8 +452,8 @@
     <footer class="footer">
         <div class="footer__items">
             <div class="footer__posts">
-                <div class="footer__title">Recent Posts</div>
-                <ul class="footer__list">
+                <div class="footer__title posts">Recent Posts</div>
+                <ul class="footer__list posts__list">
                     <li class="footer__list-item"><a href="#" class="footer__list-link">» How you can impact your
                             customers.</a></li>
                     <li class="footer__list-item"><a href="#" class="footer__list-link">» Construction is all about
@@ -464,7 +467,7 @@
                 </ul>
             </div>
             <div class="footer__news">
-                <div class="footer__title">Recent News</div>
+                <div class="footer__title recent">Recent News</div>
                 <a href="#" class="footer__news-block">
                     <img src="img/build.jpg" alt="" class="footer__news-img">
                     <p class="footer__news-text">
@@ -481,8 +484,8 @@
                 </a>
             </div>
             <div class="footer__info">
-                <div class="footer__title">Contact Info</div>
-                <ul class="footer__list">
+                <div class="footer__title info">Contact Info</div>
+                <ul class="footer__list info__list">
                     <li class="footer__list-item">
                         <a href="#" data-name="fa-envelope" class="icon">
                             <i class="far fa-envelope "></i>
@@ -533,10 +536,11 @@
             </div>
         </div>
     </footer>
-    <!-- 
+    <!---->
+    <!--
     <div class="text">
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </div>-->
+    </div> -->
 
     <script src="js/main.min.js"></script>
 </body>
