--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
         <div class="container">
             <div class="contact__inner">
                 <div class="contact__text">
-                    Consulting And Estimate For Your Project, <span>Contact Us Today</span>
+                    <span class="first"> Consulting And Estimate For Your Project,</span> <span class="second">Contact
+                        Us Today</span>
                 </div>
-                <div class="contact__span">Contact Us Today</div>
+
                 <div class="contact__btn">
                     <a href="#" class="contacts__btn-link">Get a Quote</a>
                 </div>
@@ -99,9 +100,10 @@
 
     <div class="features">
         <div class="container">
-            <div class="features__content">
-                <h2 class="features__title">Our Services</h2>
-                <p class="features__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi, omnis ad,
+            <div class="features__content content">
+                <h2 class="features__title title">Our Services</h2>
+                <p class="features__text text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi, omnis
+                    ad,
                     quis explicabo laboriosam suscipit at magnam voluptatem quam accusamus, ipsum praesentium? Odio
                     neque veniam eos deleniti, quasi asperiores reprehenderit.</p>
             </div>
@@ -172,9 +174,10 @@
     </div>
 
     <div class="portfolio">
-        <div class="portfolio__content">
-            <h3 class="portfolio__title">FEATURED WORKS</h3>
-            <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit nisi blanditiis
+        <div class="portfolio__content content">
+            <h3 class="portfolio__title title">FEATURED WORKS</h3>
+            <p class="portfolio__text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit nisi
+                blanditiis
                 dolor excepturi ratione amet tenetur praesentium ducimus nam expedita, aliquid, cupiditate iste dolores
                 aliquam quisquam minus fugiat deserunt culpa!</p>
         </div>
@@ -292,9 +295,10 @@
 
     <div class="feedback">
         <div class="container">
-            <div class="feedback__content">
-                <div class="feedback__title">CUSTOMER FEEDBACK</div>
-                <div class="feedback__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat mollitia,
+            <div class="feedback__content content">
+                <div class="feedback__title title">CUSTOMER FEEDBACK</div>
+                <div class="feedback__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
+                    mollitia,
                     labore magnam quae optio quod asperiores unde nostrum consectetur enim iusto dolores porro,
                     inventore id
                     voluptatibus voluptate a quis ut.</div>
@@ -407,9 +411,9 @@
 
     <div class="news">
         <div class="container">
-            <div class="news__content">
-                <h2 class="news__title">Our Featured News</h2>
-                <p class="news__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi, omnis ad,
+            <div class="news__content content">
+                <h2 class="news__title title">Our Featured News</h2>
+                <p class="news__text text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi, omnis ad,
                     quis explicabo laboriosam suscipit at magnam voluptatem quam accusamus, ipsum praesentium? Odio
                     neque veniam eos deleniti, quasi asperiores reprehenderit.</p>
             </div>
